work around overflow issue on resume

--- a/src/assets/style/resume.scss
+++ b/src/assets/style/resume.scss
@@ -2,6 +2,8 @@
 @import "_smui-theme.scss";
 
 .jdev-route-resume {
+  overflow-x: hidden;
+
   a {
     font-weight: bold;
     color: $mdc-theme-primary;
